--- a/code/style.css
+++ b/code/style.css
@@ -6,18 +6,20 @@ html {
   background: #f8c3d3;
   color: black;
 }
-
+body {
+  font-family: 'Josefin Slab', serif;
+}
 /* Text */
 
 h1 {
 }
 
 h3 {
-
+font-size: 30px;
 }
 
 p {
-  font-size: 18px;
+  font-size: 20px;
 }
 /* Header  */
 
@@ -48,13 +50,15 @@ align-items: center;
  font-weight: bold;
  font-size: 20px;
  color: #043c8c;
- padding: 10px;
+ padding: 15px;
  text-transform: uppercase;
 text-shadow: 1px 2px white;
 display: inline-block;
-;
 }
 
+.navigation a:hover {
+  color: #e8423f;
+}
 /* Big News */
 
 .big-news {
@@ -63,6 +67,7 @@ grid-template-columns: 1fr;
 grid-gap: 5px;
 margin-bottom: 20px;
 text-align: center;
+font-weight: bold;
 /* border: 1px solid black; */
 
 padding: 10px;
@@ -114,6 +119,7 @@ box-shadow: 5px 5px black;
     text-align: left;
     grid-gap: 20px;
     font-weight: bold;
+    margin-bottom: 10px;
   }
 
   .big-news img {
