add box-sizing big img

--- a/code/style.css
+++ b/code/style.css
@@ -84,6 +84,7 @@ a:visited {
 .img-and-text-container {
   display: flex;
   flex-direction: column;
+  box-sizing: content-box;
 }
 
 /* .big-news {
