--- a/code/style.css
+++ b/code/style.css
@@ -4,11 +4,12 @@
   margin: 0;
   padding: 0;
 }
+html { background-color: orange;}
 
 body {
   background-color: orange;
   min-height: 100vh;
-  min-width: 500px; /*To make the body not to shrink*/
+  min-width: 500px; /*To make the body not to shrink less than 500px*/
   
 }
 /*HEADER STYLING*/
@@ -36,17 +37,19 @@ ul > li {
   border: 1px solid blue;
   border-radius: 40%;
   position: absolute;
-  top: 10px;
-  left: 5px;
+  top: 25px;
+  left: 20px;
 }
 
 h1 {
   text-align: center;
   margin-top: 1rem;
+  text-decoration: underline;
   color: blue;
   font-family: 'Newsreader', serif;
 }
-/* Big news section */
+
+/* BIG NEWS SECTION */
 
 section.big-news {
   margin: 0 auto;
@@ -57,10 +60,7 @@ section.big-news {
   border-radius: 50px;
 }
 
-.cat-foto-wrapper {
-  margin: 20px;
-
-}
+.cat-foto-wrapper { margin: 20px;}
 
 .cat-foto-wrapper img {
   width: 100%;
@@ -82,27 +82,23 @@ section.big-news p {
   font-family: 'Hina Mincho', serif;
 }
 
-span {
- 
-  font-weight: bolder;
-}
+span { font-weight: bolder;}
 
 a {
   text-decoration: none;
   color:blue;
 }
 
-/* SMALL SECTION: general styling for small section*/
+/* SMALL NEWS SECTION */
 section.small-news {
-  border:3px solid;
+  width: 90%;
+  margin:0 auto;
   margin-top: 2rem;
-  /*display:flex;
-  flex-direction: column; */
 }
 
 div.card {
   border:3px solid rgb(173, 115, 6);
-  margin: 1rem;
+  margin: 1.3rem;
   background-color: cornsilk;
 }
 
@@ -112,68 +108,52 @@ h3 {
   font-size: 1.5rem;
 }
 
-.card img {
-  width: 100%;
-}
+.card img { width: 100%;}
 
 .card p {
   margin: 1.5rem;
   font-size: 1.6rem;
   line-height: 1.5;
   font-family: 'Hina Mincho', serif;
-
 }
 
 
-/*MEDIA QUERIES*/
-
-@media (min-width: 600px) {
-  section.small-news {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-  }
-  div.card {
-    width: 262px;
-  }
-
-  .card img {
-      height: 300px;
-
-  }
-
-}
-
-
+/* MEDIA QUERIES */
 
 @media (min-width: 800px) {
   section.big-news {
     display: flex;
-    align-items: center;
+    align-items: center; 
   }
 
-  .cat-foto-wrapper img {
-    /*border-radius: 20%;*/
-    width:360px;
-  }
+  .cat-foto-wrapper img { width:360px;}
 
-  section.big-news h2 {
-    text-align: justify;
-  }
+  section.big-news h2 { text-align: justify;}
+
+/*--small-news-section----------------*/
 
   section.small-news {
-    width: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    width: 100%;
     margin: 2rem auto;
   }
+  div.card {
+    width: 362px;
+  }
+  .card img {
+    height: 250px;
+}
 }
 
 
 
 @media (min-width:1212px) {
-  .cat-foto-wrapper img {
-    width: 500px;
-  }
-  section.small-news {width: 100%;}
-
-  
+html { background-color: blue;} 
+body { width: 70%; margin:0 auto;}
+header { width: 70%;}
+nav ul { justify-content: flex-end; margin-right: 1rem;}
+section.big-news { width: 800px;}
+section.small-news { width: 100%;} 
 }
