--- a/code/style.css
+++ b/code/style.css
@@ -40,7 +40,6 @@ margin-bottom: 50px;
   flex-direction: column;
   color: black;
   align-items: center;
-  
 }
 
 .main-story {
@@ -53,8 +52,8 @@ margin-bottom: 50px;
 }
 
 .main-photo {
-  width: -webkit-fill-available;
   margin: 0px 10px 23px 10px;
+  height: 220px;
 }
 
 .main-photo:hover {
@@ -77,6 +76,7 @@ margin-bottom: 50px;
 .card-photo {
   width: -webkit-fill-available;
   margin-bottom: 10px;
+  height: 200px;
 }
 
 .card-name {
@@ -131,6 +131,7 @@ margin-bottom: 50px;
     flex-direction: row;
     justify-content: space-evenly;
     margin-bottom: 3%;
+    align-items: stretch
   }
 
   .main-story {
@@ -205,6 +206,7 @@ margin-bottom: 50px;
   .intro {
     display: flex;
     flex-direction: row;
+    align-items: stretch
     color: black;
     margin: 5%;
   }
@@ -217,6 +219,10 @@ margin-bottom: 50px;
     margin-top: auto;
   }
  
+  .main-photo {
+    height: 100%;
+  }
+
   .card-container {
     display: flex;
     flex-direction: row;
@@ -237,8 +243,9 @@ margin-bottom: 50px;
   }
   
   .card-photo {
-    width: -webkit-fill-available;
+    width: -webki-fill-available;
     margin: 10% 10% 1% 10%;
+    height: 150px;
   }
   
   .card-name {
