--- a/code/style.css
+++ b/code/style.css
@@ -28,12 +28,12 @@ a:link {
 }
 
 a:hover {
-  color: black;
-  text-decoration: underline;
+  background-color: orange;
+  /* text-decoration: underline; */
 }
 
 a:visited {
-  color: plum;
+  color: rgb(255, 0, 0);
   text-decoration: underline;
 }
 
@@ -56,7 +56,7 @@ a:visited {
   display: flex;
   justify-content: flex-start;
   /* margin: 10px; */
-  padding-bottom: 5px;
+  padding: 10px 0px 5px;
   color: rgb(236, 54, 54);
   font-size: 16px;
   text-transform: uppercase;
@@ -67,11 +67,11 @@ a:visited {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 1rem;
-  padding: 0px 40px;
 }
 
 .big-news-img {
-  width: 1024;
+  max-width: auto;
+  height: 100%;
   /* margin: 20px; */
 }
 
@@ -173,12 +173,26 @@ a.inline-link {
   padding: 1rem;
   /* background: rgb(255, 213, 231); */
   margin-top: 20px;
+  overflow: hidden;
 }
 
-.small-news-img {
+/* .small-news-img {
   padding-bottom: 20px;
   max-width: 100%;
   height: auto;
+} */
+
+a.small-news-link {
+  color: black;
+  letter-spacing: 0;
+  text-decoration: none;
+  text-transform: none;
+  letter-spacing: none;
+  text-decoration: none;
+}
+
+a.small-news-link:visited {
+  background-color: peachpuff;
 }
 
 .small-news-text {
@@ -191,6 +205,7 @@ a.inline-link {
 .footer {
   display: flex;
   margin: 20px;
+  font-size: 12px;
 }
 
 @media screen and (max-width: 767px) {
@@ -229,6 +244,9 @@ a.inline-link {
     justify-content: flex-start;
   }
 
+  a.search-link:hover {
+    background-color: rgb(255, 238, 224);
+  }
   .search-link {
     background-color: orange;
   }
